--- a/src/styles/popup-filter.scss
+++ b/src/styles/popup-filter.scss
@@ -110,6 +110,7 @@
         max-height: 2.25rem;
 
         overflow-y: hidden;
+        overflow-x: hidden;
 
         color: var(--text-color-primary);
         font-size: var(--font-size-note-title);
