--- a/src/styles/filter.scss
+++ b/src/styles/filter.scss
@@ -1,38 +1,37 @@
+.custom__sort-label-wrapper {
+    color: white;
+}
+
 .custom {
-    //display: block;
+    margin-bottom: 2rem;
 
-    position: absolute;
-    right: 0;
-
-    border: var(--border-primary);
-    border-radius: var(--border-radius);
-    margin-top: 1rem;
-
-    background: var(--bg-color-note);
-    color: #ffffff !important;
+    background: var(--bg-primary);
 
     &__view {
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 0.25rem;
+        gap: 1rem;
 
-        margin-bottom: 0.25rem;
-        padding: 0.75rem 0;
+        margin-bottom: 2rem;
+
 
         width: 100%;
+
+        font-weight: 500;
 
         &-top {
             display: flex;
             justify-content: flex-start;
 
-            padding: 0 0.75rem;
-
             width: 100%;
         }
 
         &-title {
-            font-size: 1rem;
+            font-size: var(--font-size-heading-category);
+            font-weight: 500;
+
+            color: #ffffff;
         }
 
         &-btn-wrapper {
@@ -48,12 +47,14 @@
             align-items: center;
 
             //border-radius: var(--border-radius);
-            border-radius: 0;
+            border: var(--border-primary);
+            border-radius: var(--border-radius);
             padding: 1.75rem 0;
 
             width: 50%;
 
             color: hsl(0, 0%, 88%);
+            color: var(--text-color);
 
             &:hover {
                 color: hsl(0, 0%, 100%);
@@ -66,37 +67,38 @@
     }
 
     &__sort {
-        padding-bottom: 0.75rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        margin-bottom: 2rem;
 
         &-title {
-            font-size: 1rem;
-            margin-bottom: 0.25rem;
-            padding-left: 0.75rem;
+            font-size: var(--font-size-heading-category);
+            font-weight: 500;
+
+            color: #ffffff;
         }
 
         &-main {
             display: flex;
             flex-direction: column;
+            gap: 0.5rem;
         }
 
         &-options {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            gap: 0.5rem;
-
-            padding: 0.25rem 0.75rem;
+            gap: 0.75rem;
 
             cursor: pointer;
-
-            &:hover {
-                background-color: var(--bg-color-modal-hover);
-            }
         }
     }
 
     &__select {
         width: 180px;
+        width: 100%;
 
         border: var(--border-primary);
         border-radius: var(--border-radius);
@@ -105,16 +107,14 @@
 
         &:hover {
             cursor: pointer;
+
+            background: var(--bg-primary-hover);
         }
 
         &-trigger {
             padding: 0.25rem 0.5rem;
 
-            color: hsl(0, 0%, 88%);
-
-            &:hover {
-                color: hsl(0, 0%, 100%);
-            }
+            color: white;
         }
 
         &-options {
@@ -123,14 +123,16 @@
             border: var(--border-primary);
             border-radius: var(--border-radius);
 
-            background-color: var(--bg-color-note);
+            background: var(--bg-primary);
         }
 
         &-choice {
             padding: 0.25rem 0.5rem;
 
+            color: white;
+
             &:hover {
-                background-color: hsl(0, 0%, 38%);
+                background-color: var(--bg-primary-hover);
             }
         }
     }
