--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,9 +1,75 @@
-.sidebar {
-    max-width: 250px;
-    min-width: 200px;
-    width: 30%;
+.sidebar-wrapper.in-view {
+    transform: translateX(0);
+}
 
-    margin-top: 3rem;
+.sidebar-wrapper {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    left: 0;
+    z-index: 990;
+
+    transform: translateX(100%);
+
+    width: 100%;
+    height: 100%;
+
+    transition: transform 0.2s ease-in-out;
+
+    transition: background 0.2s ease-in-out;
+    background: hsla(0, 0%, 0%, 0.7);
+
+    @media (min-width: 300px) {
+        transform: translateX(350%);
+    }
+}
+
+.btn-new-tag,
+.btn-new-note,
+.btn-toggle-options {
+    border: var(--border-primary);
+    border-radius: var(--border-radius);
+
+    width: 2rem;
+    height: 2rem;
+
+    padding: 0;
+
+    background: var(--bg-primary);
+    color: var(--text-color-primary);
+
+    &:hover {
+        background: var(--bg-primary-hover);
+    }
+
+    i {
+        font-size: 1.15rem;
+    }
+}
+
+.sidebar {
+    // max-width: 300px;
+    // min-width: 200px;
+    width: 250px;
+    //width: 30%;
+    height: 100%;
+
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 900;
+
+    border-left: var(--border-primary);
+    padding: var(--padding-note);
+
+    background: var(--bg-primary);
+
+    &__btn-wrapper {
+        display: flex;
+        justify-content: flex-end;
+
+        margin-bottom: 1rem;
+    }
 
     &__options {
         display: flex;
@@ -15,12 +81,7 @@
         flex-direction: column;
         gap: 1rem;
 
-        border: (var(--border-primary));
-        border-radius: var(--border-radius);
-        margin-bottom: 1.5rem;
-        padding: var(--padding-note);
-
-        background: var(--bg-color-note);
+        margin-bottom: 2rem;
 
         &-list {
             display: flex;
@@ -34,7 +95,7 @@
 
             height: 2.25rem;
 
-            border: 1px solid rgba(255, 255, 255, 0.125);
+            border: var(--border-primary);
             border-radius: var(--border-radius);
             padding: 0.5rem;
 
@@ -65,14 +126,7 @@
         flex-direction: column;
         gap: 1rem;
 
-        border: (var(--border-primary));
-        border-radius: var(--border-radius);
-        margin-bottom: 1.5rem;
-        padding: var(--padding-note);
-
         overflow-y: scroll;
-
-        background: var(--bg-color-note);
 
         &-list {
             display: flex;
@@ -87,7 +141,7 @@
 
             height: 2.25rem;
 
-            border: 1px solid rgba(255, 255, 255, 0.125);
+            border: var(--border-primary);
             border-radius: var(--border-radius);
             padding: 0.5rem;
 
@@ -107,6 +161,11 @@
                 margin-right: 0.5rem;
             }
         }
+    }
+
+    &__header-wrapper {
+        display: flex;
+        justify-content: space-between;
     }
 
     &__header {
