--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -33,6 +33,14 @@
     --shadow: 0rem 0.625rem 0.9375rem 0.625rem rgba(0, 0, 0, 0.3);
 
     --transition: 0.2s ease-in-out;
+
+    --heading-color: hsl(0, 0%, 100%);
+    --text-color: hsl(180, 2%, 60%);
+    --brand-color: hsl(39, 100%, 45%);
+    --brand-color-hover: hsl(39, 100%, 35%);
+    --border-primary: 1px #373a41 solid;
+    --bg-primary: hsl(220, 4%, 2%);
+    --bg-primary-hover: hsl(220, 4%, 8%);
 }
 
 * {
@@ -55,12 +63,13 @@ html {
 }
 
 body {
-    background: var(--bg-color-body);
-
+    // display: grid;
+    // place-items: center;
     font-family: "Inter", serif;
     font-weight: 400;
-
     line-height: 1.5;
+
+    background: var(--bg-primary);
 }
 
 header {
@@ -68,29 +77,36 @@ header {
     justify-content: space-between;
 }
 
+div {
+    transition: var(--transition);
+}
+
 textarea {
+    width: 100%;
+
     overflow-y: hidden;
     resize: none;
-    width: 100%;
     box-sizing: border-box;
+    resize: none;
+
+    border: var(--border-primary);
+    border-radius: var(--border-radius);
+    padding: 0.5rem 0.65rem;
 
     font-size: var(--font-size-btn);
+    font-family: "Inter", serif;
+    line-height: 1.4;
+
     color: var(--text-color-primary);
     background: none;
 
-    font-family: "Inter", serif;
-    line-height: 1.5;
+    transition:
+        border-color 0.3s,
+        box-shadow 0.3s;
 
-    resize: none;
-}
-
-label {
-    pointer-events: none;
-}
-
-p {
-    color: var(--text-color-muted);
-    font-size: var(--font-size-body);
+    &:focus {
+        border: 1px solid hsl(0, 0%, 70%);
+    }
 }
 
 button {
@@ -117,7 +133,34 @@ button {
     }
 }
 
-div {
+h3 {
+    color: var(--heading-color);
+
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+h2 {
+    color: var(--heading-color);
+
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+p {
+    font-size: var(--font-size-body);
+}
+
+label {
+    pointer-events: none;
+}
+
+svg {
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+li {
     transition: var(--transition);
 }
 
@@ -162,15 +205,6 @@ div {
     }
 }
 
-svg {
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-li {
-    transition: var(--transition);
-}
-
 .note-creation-popup,
 .note-editing-popup,
 .note-filtering-popup,
@@ -191,19 +225,17 @@ li {
     background-color: hsla(0, 0%, 0%, 0.7);
 }
 
-body {
-    display: grid;
-    place-items: center;
+.navbar__btn-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .note-app {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    max-width: 1000px;
     max-width: 1500px;
     width: 95%;
+
+    margin: 0 auto;
 }
 
 .navbar {
@@ -211,13 +243,15 @@ body {
     justify-content: space-between;
 
     position: fixed;
-    z-index: 1000;
+    top: 0;
+    z-index: 600;
 
-    max-width: 1000px;
     max-width: 1500px;
-    width: 85%;
+    width: 95%;
 
     padding: 1rem 0;
+
+    background: var(--bg-primary);
 
     &__title {
         display: flex;
@@ -226,36 +260,36 @@ body {
         color: var(--text-color-primary);
         font-size: var(--font-size-heading-app);
     }
-
-    &__btn-wrapper {
-        display: flex;
-        gap: 0.75rem;
-    }
 }
 
 .main {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 2rem;
 
     width: 100%;
 
-    margin-top: 120px;
+    margin-top: 100px;
+
+    position: relative;
 }
 
 .note-wrapper {
-    //max-width: 700px;
-    //min-width: 550px;
-    //width: 65%;
+    display: flex;
+    flex-direction: column;
+    //align-items: center;
+
     width: 100%;
+}
+
+.unbookmarked-category,
+.bookmarked-category {
+    margin: 0 auto;
 }
 
 .notes-list,
 .bookmarked-notes-list {
-    //display: flex;
-    //flex-direction: column;
-    gap: 1rem;
-
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
@@ -278,6 +312,7 @@ body {
 
 .category {
     margin-bottom: 2rem;
+
     &__details {
         display: flex;
         align-items: center;
@@ -306,6 +341,70 @@ body {
     }
 }
 
+.list-layout {
+    display: flex;
+    flex-direction: column;
+
+    gap: 1.5rem;
+
+    transition:
+        gap 0.3s ease,
+        transform 0.3s ease;
+}
+
+.grid-layout {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+
+    transition:
+        gap 0.3s ease,
+        transform 0.3s ease;
+
+    @media (width < 1000px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (width < 700px) {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+.note-about-list-view {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+
+    // @media (max-width: 600px) {
+    //     display: flex;
+    //     flex-direction: column;
+    //     align-items: flex-start;
+    // }
+}
+
+.note-about-grid-view {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.note-content-list-view {
+    display: block;
+
+    @media (max-width: 600px) {
+        display: none;
+    }
+}
+
+.note-content-grid-view {
+    display: none;
+}
+
+.hidden {
+    display: none;
+}
+
 .input-wrapper {
     display: inline-block;
 
@@ -318,7 +417,7 @@ body {
         width: 100%;
 
         outline: none;
-        border: 1px solid hsla(0, 0%, 100%, 0.2);
+        border: var(--border-primary);
         border-radius: var(--border-radius);
         padding: 10px 12px;
 
@@ -333,7 +432,7 @@ body {
             box-shadow 0.3s;
 
         &:focus {
-            border: 1px solid white;
+            border: 1px solid hsl(0, 0%, 70%);
         }
 
         &:not(:placeholder-shown) + .input-label,
@@ -357,20 +456,14 @@ body {
     }
 }
 
-textarea {
-    border: 1px solid hsla(0, 0%, 100%, 0.2);
-    border-radius: var(--border-radius);
-    padding: 0 0.65rem;
+.active {
+    background: var(--bg-color-btn-add);
+    color: hsl(0, 0%, 100%);
+}
 
-    line-height: 1.3;
-
-    transition:
-        border-color 0.3s,
-        box-shadow 0.3s;
-
-    &:focus {
-        border: 1px solid white;
-    }
+.custom__view-btn.active {
+    background: var(--brand-color);
+    color: hsl(0, 0%, 100%);
 }
 
 .rotate {
@@ -393,91 +486,18 @@ textarea {
     color: rgb(0, 89, 255);
 }
 
-.red-p1 .ri-circle-fill {
+.red-p1 .ri-circle-line {
     color: red;
 }
 
-.orange-p2 .ri-circle-fill {
+.orange-p2 .ri-circle-line {
     color: orange;
 }
 
-.yellow-p3 .ri-circle-fill {
+.yellow-p3 .ri-circle-line {
     color: yellow;
 }
 
-.blue-p4 .ri-circle-fill {
+.blue-p4 .ri-circle-line {
     color: rgb(0, 89, 255);
-}
-
-//! The below will get toggled when the user switches between list and grid view
-
-.category {
-    container-type: inline-size;
-}
-
-.list-layout {
-    display: flex;
-    flex-direction: column;
-
-    gap: 1.5rem;
-
-    transition:
-        gap 0.3s ease,
-        transform 0.3s ease;
-}
-
-.grid-layout {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
-
-    transition:
-        gap 0.3s ease,
-        transform 0.3s ease;
-
-        @container (min-width: 800px) {
-        grid-template-columns: repeat(3, 1fr);
-    }
-
-            @container (max-width: 525px) {
-        grid-template-columns: repeat(1, 1fr);
-    }
-}
-
-.active {
-    background: var(--bg-color-btn-add);
-    color: hsl(0, 0%, 100%);
-}
-
-.custom__view-btn.active {
-    background: var(--bg-color-btn-add);
-    color: hsl(0, 0%, 100%);
-}
-
-.note-about-list-view {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    margin-top: 1.5rem;
-}
-
-.note-about-grid-view {
-    //display: block;
-    display: flex;
-    flex-direction: column;
-
-    margin-top: 1.5rem;
-}
-
-.note-content-list-view {
-    display: block;
-}
-
-.note-content-grid-view {
-    display: none;
-}
-
-.hidden {
-    display: none;
 }
