--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -69,7 +69,7 @@
     padding: 0.75rem;
 
     &:hover {
-        background: var(--bg-color-modal-hover);
+        background: var(--bg-primary-hover);
     }
 }
 
