--- a/src/styles/popup-filter.scss
+++ b/src/styles/popup-filter.scss
@@ -1,41 +1,41 @@
-#popup-filter__close-btn {
-    border: var(--border-primary);
-    border-radius: var(--border-radius);
+// #popup-filter__close-btn {
+//     border: var(--border-primary);
+//     border-radius: var(--border-radius);
 
-    width: 3rem;
-    height: 3rem;
+//     width: 3rem;
+//     height: 3rem;
 
-    padding: 0;
+//     padding: 0;
 
-    color: var(--text-color-primary);
+//     color: var(--text-color);
 
-    &:hover {
-        background: var(--bg-color-modal-hover);
-    }
+//     &:hover {
+//         background: var(--bg-primary-hover);
+//     }
 
-    i {
-        position: relative;
-        top: 0.09rem;
+//     i {
+//         position: relative;
+//         top: 0.09rem;
 
-        font-size: 1.5rem;
-    }
-}
+//         font-size: 1.5rem;
+//     }
+// }
 
 .popup-filter {
-    border: var(--border-primary);
-    border-radius: var(--border-radius);
-    padding: var(--padding-note);
-
     width: 90%;
     min-height: 300px;
     max-height: 1000px;
     max-width: 800px;
 
+    border: var(--border-primary);
+    border-radius: var(--border-radius);
+    padding: var(--padding-note);
+
     position: relative;
 
     overflow-y: scroll;
 
-    background-color: var(--bg-color-modal);
+    background-color: var(--bg-primary);
     color: var(--text-color-primary);
 
     &__close-btn {
@@ -47,10 +47,10 @@
 
         padding: 0;
 
-        color: var(--text-color-primary);
+        color: var(--text-color);
 
         &:hover {
-            background: var(--bg-color-modal-hover);
+            background: var(--bg-primary-hover);
         }
 
         i {
@@ -89,9 +89,13 @@
         border-radius: var(--border-radius);
         padding: var(--padding-note);
 
-        background: var(--bg-color-note);
+        background: var(--bg-primary);
         color: var(--text-color-primary);
         font-size: var(--font-size-heading-note);
+
+        &:hover {
+            cursor: pointer;
+        }
     }
 
     &__note-details {
