--- a/src/styles/popup.scss
+++ b/src/styles/popup.scss
@@ -125,7 +125,7 @@
             color: var(--text-color-primary);
 
             &:hover {
-                background: var(--bg-color-modal-hover);
+                background: var(--bg-primary-hover);
             }
         }
 
@@ -172,7 +172,7 @@
             color: var(--text-color-primary);
 
             &:hover {
-                background: var(--bg-color-modal-hover);
+                background: var(--bg-primary-hover);
             }
         }
 
